--- a/readme
+++ b/readme
@@ -1,1 +1,2 @@
 these are the dot files for VIM, Tmux and shell from my XPS laptop.
+agnoster_theme, shoot, music_ctr and .dir_colors are copies, not symlinked.
